--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,29 @@
-Hello World!
+<div class="container-fluid">
+  <div style="color: blue;">
+    <h1>{{ title }}</h1>
+    <h3>{{ description }}</h3>
+  </div>
+
+  <div style="width: 300px;">
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" placeholder="Enter name..." id="name" required [(ngModel)]="nameValue" name="name">
+      </div>
+
+      <div class="form-group">
+        <label for="description">Description</label>
+        <input type="text" class="form-control" placeholder="Enter description..." id="description" required [(ngModel)]="descriptionValue" name="description">
+      </div>
+
+      <div class="btn-group">
+        <button type="submit" class="btn btn-success">Submit</button>
+      </div>
+    </form>
+  </div>
+
+  <h2>Content from Firebase</h2>
+  <div class="col-md-3">
+    <pre *ngFor="let todo of todos | async">{{todo.name}}</pre>
+  </div>
+</div>
